welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:1: error: not found: value public
public void run() { 
^Poucet:1: error: Unit does not take parameters
public void run() { 
                  ^